examples/test/testpolicy5882.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5882
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key44: value23
      key1: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value8
          key7: value34
      podSelector:
        matchLabels:
          key10: value1
          key18: value4
